--- a/FireForecastingv2_modelLearningV4.ipynb
+++ b/FireForecastingv2_modelLearningV4.ipynb
@@ -55,9 +55,7 @@
      ]
     }
    ],
-   "source": [
-    "cd '/home/mohamed.ahajjam/FireImpact/'"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -1552,8 +1550,8 @@
    ],
    "source": [
     "for hrz in list([0,7,30,90]):\n",
-    "    train_data = pd.read_csv(f'FireBurntArea_trainsetV4_{hrz}Days.csv', header=0)\n",
-    "    test_data = pd.read_csv(f'FireBurntArea_testsetV4_{hrz}Days.csv', header=0)\n",
+    "    train_data = pd.read_csv(f'FireBurntArea_trainset_{hrz}Days.csv', header=0)\n",
+    "    test_data = pd.read_csv(f'FireBurntArea_testset_{hrz}Days.csv', header=0)\n",
     "\n",
     "    sel_features = ['snowmelt_sum','snowfall_sum']#['snowmelt_sum', 'snow_depth', 'snow_cover', 'prcp', 'LC_Type1', 'LC_Type2']\n",
     "    sel_features = sel_features + ['totalArea_km2']\n",
@@ -7965,7 +7963,7 @@
    "outputs": [],
    "source": [
     "for hrz in list([0,7,30,90]):\n",
-    "    data = pd.read_csv(f'FireDuration_datasetV4_{hrz}Days.csv', header=0)\n",
+    "    data = pd.read_csv(f'FireDuration_dataset_{hrz}Days.csv', header=0)\n",
     "\n",
     "    #     print('Splitting to train and test sets..')\n",
     "    all_indices = list(range(len(data)))\n",
@@ -7973,8 +7971,8 @@
     "    train_ind, test_ind = train_test_split(all_indices, test_size=0.2, random_state=42, stratify=None)\n",
     "\n",
     "    trainset, testset = data.iloc[train_ind,:], data.iloc[test_ind,:]\n",
-    "    trainset.to_csv(f'FireDuration_trainsetV4_{hrz}Days.csv')\n",
-    "    testset.to_csv(f'FireDuration_testsetV4_{hrz}Days.csv')"
+    "    trainset.to_csv(f'FireDuration_trainset_{hrz}Days.csv')\n",
+    "    testset.to_csv(f'FireDuration_testset_{hrz}Days.csv')"
    ]
   },
   {
@@ -7994,8 +7992,8 @@
    "source": [
     "#get data for time series deep learning prediction \n",
     "hrz = 0\n",
-    "data_train = pd.read_csv(f'FireDuration_trainsetV4_{hrz}Days.csv', header=0,index_col=0)\n",
-    "data_test = pd.read_csv(f'FireDuration_testsetV4_{hrz}Days.csv', header=0,index_col=0)\n",
+    "data_train = pd.read_csv(f'FireDuration_trainset_{hrz}Days.csv', header=0,index_col=0)\n",
+    "data_test = pd.read_csv(f'FireDuration_testset_{hrz}Days.csv', header=0,index_col=0)\n",
     "\n",
     "inlen = 10\n",
     "addlen = 30#30#7#0\n",
